2.2_the_project_step8/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-step8
  labels:
    name: project-step8
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: project-step8
  template:
    metadata:
      name: project-step8
      labels:
        name: project-step8
        version: v1
    spec:
      volumes:
        - name: project-step8-volume
          persistentVolumeClaim:
            claimName: project-step8-pvc
      containers:
        - name: project-step8
          image: project-step8:v1
          volumeMounts:
            - name: project-step8-volume
              mountPath: /usr/src/mount
