2.2_the_project_step8/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-step8
spec:
  type: ClusterIP
  selector:
    name: project-step8
  ports:
    - name: http
      port: 1234
      targetPort: 80
